@@ -23,6 +23,7 @@
     <third.party.dir>${project.basedir}/third_party</third.party.dir>
     <gwt.skipCompilation>true</gwt.skipCompilation>
     <surefire.skip>true</surefire.skip>
+    <argLine>-Djdk.net.file.ftpfallback=true -Dnet.bytebuddy.experimental=true</argLine>
   </properties>
 
   <dependencyManagement>
@@ -223,6 +224,12 @@
     	<scope>test</scope>
     </dependency>
     <dependency>
+    	<groupId>org.mockito</groupId>
+    	<artifactId>mockito-junit-jupiter</artifactId>
+    	<version>5.12.0</version>
+    	<scope>test</scope>
+    </dependency>
+    <dependency>
     	<groupId>org.hamcrest</groupId>
     	<artifactId>hamcrest</artifactId>
     	<version>2.2</version>
@@ -346,6 +353,7 @@
         <version>3.2.5</version>
         <configuration>
           <skip>${surefire.skip}</skip>
+          <argLine>${argLine}</argLine>
         </configuration>
       </plugin>
 
@@ -354,6 +362,9 @@
   <profiles>
     <profile>
       <id>gwt-compile-java25</id>
+      <activation>
+        <jdk>[25,)</jdk>
+      </activation>
       <build>
         <plugins>
           <plugin>
@@ -361,6 +372,7 @@
             <artifactId>gwt-maven-plugin</artifactId>
             <configuration>
               <jvmArgs>
+                <jvmArg>-Djdk.net.file.ftpfallback=true</jvmArg>
                 <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
                 <jvmArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
                 <jvmArg>--add-opens=java.base/java.io=ALL-UNNAMED</jvmArg>
